--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
     <body>
         <header>
             <a href="index.html">
-                <img src="">
+                <img class="logo" src="">
             </a>
         </header>
         <nav>
-            Home
-            Menu
-            Stories
-            About
-            Career
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Menu</a></li>
+                <li><a>Stories</a></li>
+                <li><a>About</a></li>
+                <li><a>Career</a></li>
+            </ul>
         </nav>
         <main>
+            Hello world
+            <section>
+            </section>
+            <article>
+            </article>
         </main>
         <footer>
-
+            Peachtree City all righr reserved
         </footer>
     </body>
 </html>
