--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <a href="index.html">
-                <img class="logo" src="">
+                <img class="logo" src="images/Your paragraph text.png">
             </a>
         </header>
         <nav>
