--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="default.css">
-        <title>Beef-Fil-A</title>
+        <title>Beef-fil-a</title>
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <main>
-            Hello world
+            <p>Welcome to Beef-fil-a</p>
             <section>
             </section>
             <article>
