--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="default.css">
-        <title>Beef-Fil-A</title>
+        <title>Beef-fil-a</title>
     </head>
     <body>
         <header>
@@ -21,14 +21,18 @@
             </ul>
         </nav>
         <main>
-            <p></p>
-            <section>
-            </section>
-            <article>
-            </article>
+            <p>Welcome to Beef-fil-a</p>
+            <p>Beef Hamburgers, Waffle Potato Fries, Steaks, Salads & More</p>
+            <a href="index.html">
+                <img class="link" src="images/Beef-Hamburgers_7-2.webp">
+                <img class="link" src="images/Waffle_Fry_Lifestyle_317x322.png">
+                <img class="link" src="images/steak-marinade-17-680x951.jpg">
+            </a>
+            <p>Order pick up or delivery</p>
+            <p>Find a restaurant near to you</p>
         </main>
         <footer>
-            Peachtree City all righr reserved
-        </footer>
+            <p>Peachtree City all right reserved</p>
+        </footer>   
     </body>
 </html>
