--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Find a restaurant near to you</p>
         </main>
         <footer>
-            <p>Peachtree City all right reserved</p>
+            <h5>Peachtree City all right reserved</h5>
         </footer>   
     </body>
 </html>
